@@ -1,0 +1,5 @@
+University too high
+~~~
+You have advanced past the tech level for raiding Jackpot.  So your spies have been sent back to you.
+
+-Jackpot Administration
