@@ -10,6 +10,7 @@
  - Add: RPC counter always displayed in UI
  - Fix: Can now change station owner to oneself (UI)
  - Add: homeworld highlighted and always at the top of the public profile
+ - Mod: Spies from tech levels above 15 are bounced automatically instead of jailed.
 
 3.0911:
  - Add: Reduce opacity for less-well-controlled stars.
